fix! header style changed

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -25,6 +25,7 @@
   --color-yellow: #f9a826;
 
   --bg-purple: rgba(83, 0, 116, 0.3);
+  --bg-dark-purple: rgba(49, 0, 68, 0.2);
 }
 
 /* semantic color variables for this project */
